--- a/public/home.html
+++ b/public/home.html
@@ -52,12 +52,12 @@
             <button type="button" class="close btn-close" data-dismiss="modal" aria-label="Fechar">
               <span aria-hidden="true">&times;</span>
             </button>
-            <h5 class="modal-title text-center w-100">Ver Senha</h5>
+            <h5 class="modal-title text-center w-100 texto">Ver Senha</h5>
           </div>
           <div class="modal-body">
-            <label for="verify-password">Digite sua senha para visualizar a senha criptografada:</label>
+            <label for="verify-password" class="texto">Digite sua senha para visualizar a senha criptografada:</label>
             <input type="password" id="verify-password" class="form-control" required>
-            <div id="encrypted-password-display" class="mt-2"></div>
+            <div id="encrypted-password-display" class="mt-2 texto"></div>
           </div>
           <div class="modal-footer justify-content-center">
             <button id="confirm-view-password" class="btn btn-primary">Ver Senha</button>
